<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwitchingScreens</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="button_submit">Submit</string>
    <string name="calling_activity_message">The calling activity was</string>
    <string name="tv_get_the_name">Go get the name</string>
    <string name="b_go_get_it">Go get it</string>
    <string name="user_name_was">The users name was :</string>

</resources>
