<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_get_the_name"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_go_get_it"
        android:onClick="onGetNameClick"/>
    <TextView
        android:id="@+id/tvUsernameWas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_was"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        />

</LinearLayout>
